--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@sentry/integrations": "6.14.1",
     "@sentry/react": "6.14.1",
     "@sentry/tracing": "6.14.1",
+    "@stitches/react": "^1.2.6",
     "@testing-library/jest-dom": "5.11.9",
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "12.7.1",
