--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -22,6 +22,11 @@ actions:
   permissions:
   - role: user
   - role: superadmin
+- name: createUser
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_ACTION_BASE_URL}}/create_user'
+  comment: creates a user in a circle and creates a profile if none exists
 custom_types:
   enums: []
   input_objects:
