Create updateContribution Handler
The update contribution handler ensures a contribution can't be changed
to a time that was included in a closed epoch. Contributions with a
timestamp in closed epochs are not editable. Contributions cannot have
empty descriptions. Contributions must exist for the user as well.

Permissions Updates

Make inserts allowable from the autogenerated api. It's impossible to spam
contributions thanks to the custom check.

completely disallow updates from the autogenerated api since the action
exists.

allow selects for all contributions added by the user.

Test Plan

Added unit tests to ensure all error cases are handled

--- a/hasura/metadata/databases/default/tables/public_contributions.yaml
+++ b/hasura/metadata/databases/default/tables/public_contributions.yaml
@@ -12,42 +12,32 @@ insert_permissions:
   - role: user
     permission:
       check:
-        user:
-          profile:
-            id:
-              _eq: X-Hasura-User-Id
-    columns:
-    - circle_id
-    - datetime_created
-    - description
-    backend_only: false
-    set:
-      user_id: x-hasura-User-Id
+        circle:
+          users:
+            profile:
+              id:
+                _eq: X-Hasura-User-Id
+      set:
+        user_id: x-hasura-User-Id
+      columns:
+        - circle_id
+        - description
 select_permissions:
   - role: user
     permission:
       columns:
-      - circle_id
-      - created_at
-      - datetime_created
-      - description
-      - id
-      - updated_at
-      - user_id
-      filter:
-        user:
-          profile:
-            id:
-              _eq: X-Hasura-User-Id
-update_permissions:
-  - role: user
-    permission:
-        check: null
-        columns:
+        - circle_id
+        - created_at
         - datetime_created
         - description
-        filter:
-            user:
+        - id
+        - updated_at
+        - user_id
+      filter:
+        _and:
+          - user:
               profile:
                 id:
                   _eq: X-Hasura-User-Id
+          - deleted_at:
+              _is_null: true
