Standardize Prettier Runs
It's pretty apparent some of us aren't running lint-staged on commit,
which is fine. However, lint-stage prettier fixing was divergent from
our CI-enforced `yarn prettier:check`. This has caused some spam for
git-blames which isn't the biggest deal but has really irked me for
a while.

This change makes prettier executions consistent across lint-staged and
CI.

I've also configured our prettier CLI commands to run on all
our config files, which is best practice.

--- a/package.json
+++ b/package.json
@@ -101,10 +101,10 @@
     "test": "yarn hardhat:ganache --exec craco test --runInBand",
     "test:ci": "yarn hardhat:ganache --exec ./scripts/ci.sh",
     "eject": "craco eject",
-    "lint:check": "eslint \"{api,api-lib,cypress,hasura,src}/**/*.{js,ts,tsx,graphql}\"",
+    "lint:check": "eslint \"{{api,api-lib,cypress,hasura,src}/**/*.{js,ts,tsx,graphql},*.{js,ts,tsx,graphql}}\"",
     "lint:fix": "yarn lint:check --fix",
     "postinstall": "./scripts/link_hardhat.sh",
-    "prettier": "prettier \"{api,api-lib,cypress,hasura,src}/**/*.{js,ts,tsx}\"",
+    "prettier": "prettier \"{{api,api-lib,cypress,hasura,src}/**/*.{js,ts,tsx,graphql,json},*.{js,ts,tsx,graphql,json}}\"",
     "prettier:check": "yarn prettier --check",
     "prettier:fix": "yarn prettier --write",
     "typecheck": "tsc --noEmit && tsc -p tsconfig-backend.json --noEmit",
@@ -118,7 +118,8 @@
     "{api,api-lib,hasura,src}/**/*.{js,ts,tsx,graphql}": [
       "eslint --fix",
       "prettier --write"
-    ]
+    ],
+    "{{api,api-lib,cypress,hasura,src}/**/*.json,*.json}": "prettier --write"
   },
   "husky": {
     "hooks": {
