--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@radix-ui/react-avatar": "^0.1.4",
     "@radix-ui/react-checkbox": "^0.1.5",
     "@radix-ui/react-collapsible": "^0.1.6",
-    "@radix-ui/react-dialog": "^0.1.7",
+    "@radix-ui/react-dialog": "1.0.0",
     "@radix-ui/react-hover-card": "^0.1.5",
     "@radix-ui/react-icons": "1.1.1",
     "@radix-ui/react-popover": "^0.1.6",
