--- a/package.json
+++ b/package.json
@@ -88,9 +88,11 @@
     "db-disable-cron": "scripts/disable_cron.sh",
     "generate": "./scripts/generate_zeus.sh",
     "hasura": "hasura --skip-update-check --envfile ../.env --project ./hasura",
+    "hasura": "hasura --skip-update-check --envfile ../.env --project ./hasura",
     "docker:start": "docker compose --profile dev up -d",
     "docker:stop": "docker compose --profile dev down",
     "docker:clean": "docker compose --profile dev down -v",
+    "docker:restart": "yarn docker:stop && yarn docker:start",
     "cy:dev": "yarn test:ci --cypress-only --local",
     "cy:run": "yarn test:ci --cypress-only",
     "start": "./scripts/serve.sh",
