--- a/hasura/metadata/databases/default/tables/public_contributions.yaml
+++ b/hasura/metadata/databases/default/tables/public_contributions.yaml
@@ -35,9 +35,10 @@ select_permissions:
         - user_id
       filter:
         _and:
-          - user:
-              profile:
-                id:
-                  _eq: X-Hasura-User-Id
+          - circle:
+              users:
+                profile:
+                  id:
+                    _eq: X-Hasura-User-Id
           - deleted_at:
-              _is_null: true
+            _is_null: true
