--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -28,6 +28,8 @@ tasks:
           echo "${DOTENV}" | base64 -d > .env
         fi
       fi
+  - name: start docker
+    command: yarn docker:start
   - init: yarn install && yarn setup
     command: yarn start
 
