--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@amplitude/node": "^1.10.1",
     "@apollo/client": "3.5.7",
+    "@coordinape/hardhat": "file:./hardhat",
     "@craco/craco": "6.4.3",
     "@date-io/luxon": "1.3.13",
     "@gqty/react": "2.1.0",
@@ -106,7 +107,6 @@
     "eject": "craco eject",
     "lint:check": "eslint \"{{api,api-lib,cypress,hasura,src}/**/*.{js,ts,tsx,graphql},*.{js,ts,tsx,graphql}}\"",
     "lint:fix": "yarn lint:check --fix",
-    "postinstall": "./scripts/link_hardhat.sh",
     "prettier": "prettier \"{{api,api-lib,cypress,hasura,src}/**/*.{js,ts,tsx,graphql,json},*.{js,ts,tsx,graphql,json}}\"",
     "prettier:check": "yarn prettier --check",
     "prettier:fix": "yarn prettier --write",
