--- a/package.json
+++ b/package.json
@@ -191,6 +191,7 @@
     "crypto-browserify": "3.12.0",
     "cypress": "10.2.0",
     "cypress-dotenv": "2.0.0",
+    "dd-trace": "^3.3.1",
     "dotenv": "16.0.0",
     "dotenv-expand": "6.0.1",
     "eslint": "7.32.0",
