--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -149,6 +149,15 @@ actions:
           value_from_env: HASURA_EVENT_SECRET
     permissions:
       - role: user
+  - name: markClaimed
+    definition:
+      kind: synchronous
+      handler: '{{HASURA_API_BASE_URL}}/actions/actionManager'
+      headers:
+        - name: verification_key
+          value_from_env: HASURA_EVENT_SECRET
+    permissions:
+      - role: user
   - name: restoreCoordinape
     definition:
       kind: synchronous
@@ -298,6 +307,7 @@ custom_types:
     - name: CreateUserWithTokenInput
     - name: DeleteContributionInput
     - name: UpdateContributionInput
+    - name: MarkClaimedInput
   objects:
     - name: CreateCircleResponse
       relationships:
@@ -472,5 +482,6 @@ custom_types:
           type: object
           field_mapping:
             id: id
+    - name: MarkClaimedOutput
   scalars:
     - name: timestamptz
