--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -3,7 +3,7 @@ name: 'Chromatic Publish'
 on: push
 
 jobs:
-  test:
+  chromatic:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
