--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "prettier:check": "yarn prettier --check",
     "prettier:fix": "yarn prettier --write",
     "typecheck": "tsc --noEmit && tsc -p tsconfig-backend.json --noEmit",
+    "typecheck:backend": "tsc -p tsconfig-backend.json --noEmit",
     "analyze": "source-map-explorer 'build/static/js/*.js'",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
@@ -163,6 +164,7 @@
     "@storybook/manager-webpack5": "^6.4.14",
     "@storybook/node-logger": "^6.4.14",
     "@storybook/preset-create-react-app": "^4.0.1",
+    "@swc/core": "1.3.4",
     "@testing-library/jest-dom": "5.11.9",
     "@testing-library/react": "12.1.2",
     "@tsconfig/node14": "1.0.1",
